--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/web-link": "6.1.*",
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.1.*",
+        "twbs/bootstrap": "5.2.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
