--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/yaml": "6.1.*",
         "twbs/bootstrap": "5.2.2",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-libsodium": "*"
     },
     "config": {
         "allow-plugins": {
