--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/SALLE?sslmode=disable&charset=utf8mb4&serverVersion=8.0.30-0ubuntu0.22.04.1"
+DATABASE_URL="mysql://root@127.0.0.1:3306/SALLE?serverVersion=10.4.25-MariaDB"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
