--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,11 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppAuthenticator
+            entry_point: form_login
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
             logout:
                 path: app_logout
                 target: app_login
@@ -31,7 +36,7 @@ security:
 
     role_hierarchy:
         ROLE_STRUCTURE: ROLE_STRUCTURE
-        ROLE_AUTHOR: ROLE_PARTNER
+        ROLE_PARTNER: ROLE_PARTNER
         ROLE_ADMIN: ROLE_ADMIN
 
     # Easy way to control access for large sections of your site
