--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*",
         "symfonycasts/reset-password-bundle": "^1.16",
-        "twbs/bootstrap": "5.2.2",
+        "twbs/bootstrap": "^5.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
