--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.55.0",
-        "sass-loader": "^13.0.0",
+        "sass-loader": "^13.1.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
@@ -28,7 +28,11 @@
     "packageManager": "yarn@3.2.4",
     "dependencies": {
         "autoprefixer": "^10.4.12",
-        "bootstrap": "^5.2.2",
-        "postcss-loader": "^7.0.1"
+        "bootstrap": "5.2.2",
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^4.4.1",
+        "postcss": "^8.4.18",
+        "postcss-loader": "^7.0.1",
+        "style-loader": "^3.3.1"
     }
 }
