--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,9 @@
         "symfony/yaml": "6.1.*",
         "symfonycasts/reset-password-bundle": "^1.16",
         "twbs/bootstrap": "^5.2",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.4",
+        "twig/extra-bundle": "^3.4",
+        "twig/inky-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
