--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes: ['bootstrap_5_layout.html.twig']
+    paths:
+        # point this wherever your images live
+        '%kernel.project_dir%/public/img': images
 
 when@test:
     twig:
