Partner Template CSS+HTML

--- a/.env
+++ b/.env
@@ -42,6 +42,7 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/SALLE?serverVersion=10.4.25-MariaDB"
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=sendgrid+smtp://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@default
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
