--- a/.env.prod
+++ b/.env.prod
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=089e6946ab202df65d0c8961e5096923
 ###< symfony/framework-bundle ###
 
@@ -28,7 +28,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/SALLE?serverVersion=10.4.25-MariaDB"
+DATABASE_URL="mysql://j4jznx2mq8va1pj4:wxehqx5bgnbxewhz@ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/qcg4oet7k142qzvr/SALLE?serverVersion=10.4.25-MariaDB"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
