--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,9 @@
         "twig/cssinliner-extra": "^3.4",
         "twig/extra-bundle": "^3.4",
         "twig/inky-extra": "^3.4",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fakerphp/faker": "^1.20"
     },
     "config": {
         "allow-plugins": {
@@ -99,7 +101,9 @@
             "@auto-scripts"
         ],
         "compile": [
-            "php bin/console doctrine:migration:migrate"
+            "php bin/console doctrine:migration:migrate",
+            "php bin/console doctrine:fixtures:load --no-interaction --env=PROD"
+
         ]
     },
     "conflict": {
@@ -112,8 +116,6 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "fakerphp/faker": "^1.20",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
