--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,18 @@
         "api-platform/core": "^3.0",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4.4",
+        "fakerphp/faker": "^1.20",
         "mailjet/mailjet-apiv3-php": "^1.5",
         "mollie/polyfill-libsodium": "^1.1",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.10",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
@@ -54,9 +57,7 @@
         "twig/cssinliner-extra": "^3.4",
         "twig/extra-bundle": "^3.4",
         "twig/inky-extra": "^3.4",
-        "twig/twig": "^2.12|^3.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "fakerphp/faker": "^1.20"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
