--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,9 +42,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN}
-        - { path: ^/partner, roles: ROLE_PARTNER }
-        - { path: ^/structure, roles: ROLE_STRUCTURE }
+        - { path: ^/admin, roles: ROLE_ADMIN, requires_channel: https}
+        - { path: ^/partner, roles: ROLE_PARTNER, requires_channel: https }
+        - { path: ^/structure, roles: ROLE_STRUCTURE, requires_channel: https }
 
 when@test:
     security:
